The text of the main page

--- a/index.html
+++ b/index.html
@@ -1,3 +1,209 @@
-<h1>Hi</h1>
-<p>Welcome to my webpage!</p>
-<img src="my_photo.jpg">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Vitalii Sobchuk CV</title>
+  <link rel="stylesheet" href="style.css"/>
+</head>
+<body>
+  <div class="section">
+    <p><i>I agree to the processing of personal data provided in this document for the purposes of the recruitment process in accordance with the Personal Data Protection Act of 10 May 2018 (Journal of Laws 2018, item 1000) and the Regulation (EU) 2016/679 of the European Parliament and of the Council of 27 April 2016 (General Data Protection Regulation).</i></p>
+  </div>
+
+  <h1>Vitalii Sobchuk</h1>
+
+  <div class="general-info">
+    <div class="personal-info">
+      <p><strong>Phone:</strong> <a href="tel:+48511732136">+48 511 732 136</a></p>
+      <p><strong>Email:</strong> <a href="mailto:vmsobchuk@gmail.com">vmsobchuk@gmail.com</a></p>
+      <p><strong>Date of Birth:</strong> 31.07.1985</p>
+      <p><strong>Location:</strong> <a href="https://maps.app.goo.gl/RTEuCFYu7BqUs1Kx6">Chełm 22-100, Poland</a></p>
+      <p><strong>Marital status:</strong> Married, has children</p>
+    </div>
+    <div class="photo">
+      <img src="my_photo.jpg" alt="Vitalii Sobchuk" width="150">
+    </div>
+  </div>
+
+  <div class="section">
+    <h2>Experience</h2>
+
+    <div class="job">
+      <div class="job-title">Senior Software Engineer – SoftServe</div>
+      <div class="job-period">Dec 2021 – Present</div>
+      <ul>
+        <li>Working on many corporate projects of one client - ISP of the UK</li>
+        <li>Integrating different parts of different systems with each other (over the APIs, queues, events)</li>
+        <li>Integrating payment systems (SolidGate, MonoBank)</li>
+        <li>Creating plugins for Wordpress</li>
+        <li>Creating tests with PHPUnit, Cypress, Cucumber (unit and e2e tests)</li>
+        <li>Implementing Event Driven architecture which leads to high level of isolation, simplification and reliability increasing of the products</li>
+        <li>https://savelife.in.ua/ - volunteering project</li>
+        <li>Implementing cost-effective solutions</li>
+        <li>Mentoring and preparing newcomers to be a part of the team.</li>
+      </ul>
+      <p><strong>Tools and techs:</strong> Python, PHP, Laravel, CRAFT CMS, Wordpress, MySQL, PostgreSQL, Elastic Search, Apache Kafka, JavaScript, JQuery, Vue.js, React, HTML, CSS, Git, LESS, npm, yarn, Cypress, Cucumber,  AWS stack (RDS, EC2, S3, CloudWatch)</p>
+    </div>
+
+    <div class="job">
+      <div class="job-title">Senior Software engineer in Quantox Technology</div>
+      <div class="job-period">Dec 2020 – Nov 2021</div>
+      <ul>
+        <li>Develop the API for site https://pornhub.com for Android, ROKU and WEB clients</li>
+        <li>Refactoring legacy code and optimization of features delivery process which cause reducing the features delivery time</li>
+        <li>Creating the Swagger documentation</li>
+        <li>Creating tests with PHPUnit</li>
+        <li>Refactoring the code of the site which caused simplification and decreation of code base volume, increasing reliability and deployability</li>
+        <li>Code review</li>
+
+      </ul>
+      <p><strong>Tools and techs:</strong> PHP, MySQL, PHPUnit, Elastic Search, JavaScript, JQuery, HTML, CSS, Swagger, Android Studio</p>
+    </div>
+
+    <div class="job">
+      <div class="job-title">Web Developer on FreeLance</div>
+      <div class="job-period">Apr 2020 - Oct 2020 as COVID hit</div>
+      <ul>
+        <li>Developing the site http://nashe.de/</li>
+        <li>Planing the sprints</li>
+        <li>Creating the new functionality</li>
+        <li>Applying payment systems integration (Stripe and PayPal)</li>
+        <li>Automation of tickets booking process</li>
+      </ul>
+
+      <ul>
+        <li>Developing the site https://www.ts-export.com/</li>
+        <li>Mainly fixing the bugs and restarting dead servers ;)</li>
+      </ul>
+
+      <ul>
+        <li>Developing the site https://www.f6s.com/</li>
+        <li>Automatization of interaction with AWS WAF service</li>
+      </ul>
+      <p><strong>Tools and techs:</strong> PHP, Laravel, Symfony, Zend Framework, MySQL, Elastic Search, JavaScript, JQuery, Vue.js, HTML, CSS, Git, LESS</p>
+    </div>
+
+    <div class="job">
+      <div class="job-title">Senior PHP Developer in Hosteeva</div>
+      <div class="job-period">Sep 2018 - Apr 2020</div>
+      <ul>
+        <li>Developing the core of the system https://www.hosteeva.com/</li>
+        <li>Grooming, refinement and planning of the development process - from idea to implementation</li>
+        <li>Migrating system from RabbitMQ to AWS SQS/SNS</li>
+        <li>Implementing integration with third party service providers (AirBnB, TripAdvisor)</li>
+        <li>Refactoring the old code and optimizing the system</li>
+        <li>Creating new functionality</li>
+        <li>Code review</li>
+      </ul>
+      <p><strong>Tools and techs:</strong> PHP, YII, MySQL, Elastic Search, AWS, RabbitMQ, JavaScript, JQuery, Vue.js, HTML, CSS, Git, LESS</p>
+    </div>
+
+    <div class="job">
+      <div class="job-title">Senior PHP Developer in Coding Ninjas Inc</div>
+      <div class="job-period">Sep 2018 - Apr 2020</div>
+      <ul>
+        <li>Developing the sites https://www.spinjuju.com/, https://www.letsbet.com/en/, https://www.wishmaker.com/ </li>
+        <li>Creating gaming sites from scratch</li>
+        <li>Utilizing APIs of online casino games providers (Yggdrasil Gaming, Netent and others)</li>
+        <li>Optimizing the code of the CRM laying behind the site, decreasing the number of lines of code many times which increase reliability, deployability and changeability dramatically also speeds up the development process many times.</li>
+      </ul>
+      <p><strong>Tools and techs:</strong> PHP, CodeIgniter, MySQL, Elastic Search, AWS, RabbitMQ, JavaScript, JQuery, HTML, CSS, LESS, Git, BitBucket</p>
+    </div>
+
+    <div class="job">
+      <div class="job-title">Senior Software engineer in Quantox Technology</div>
+      <div class="job-period">Dec 2020 – Nov 2021</div>
+      <ul>
+        <li></li>
+        <li></li>
+      </ul>
+      <p><strong>Tools and techs:</strong> </p>
+    </div>
+
+    <div class="job">
+      <div class="job-title">Senior PHP Developer in Hosteeva Inc</div>
+      <div class="job-period">Nov 2014 - Mar 2018</div>
+      <ul>
+        <li>Developing https://www.hosteeva.com/ from the scratch</li>
+        <li>Developing https://www.teamlio.com/ from the scratch</li>
+        <li>Developing http://www.yogaplusapp.com/ from the scratch</li>
+        <li>Searching for a new developers in team</li>
+        <li>Performing interviews</li>
+        <li>Tasks planning</li>
+        <li>Writing the code</li>
+        <li>Setting up servers</li>
+        <li>Setting up cloud services</li>
+        <li>Building geo distributed and geo redundant network</li>
+      </ul>
+      <p><strong>Tools and techs:</strong> Python, PHP, YII, MySQL, Google App Engine, Microsoft Azure services, AWS, JavaScript, JQuery, HTML, CSS, Git, Jira, BitBucket, Docker</p>
+    </div>
+
+    <div class="job">
+      <div class="job-title">Web Developer on Free Lance</div>
+      <div class="job-period">Jan 2014 - Dec 2014</div>
+      <ul>
+        <li>Developing CRM for local commercial firm</li>
+        <li>Writing the code</li>
+        <li>Planning the tasks</li>
+        <li>Setting up servers</li>
+        <li>Mentoring interns</li>
+      </ul>
+      <p><strong>Tools and techs:</strong> PHP, YII, MySQL, JavaScript, JQuery, HTML, CSS, BitBucket, LEMP, LAMP, Git</p>
+    </div>
+
+    <div class="job">
+      <div class="job-title">Network Administrator in Ukrtelecom</div>
+      <div class="job-period">Oct 2006 - Jan 2014</div>
+      <ul>
+        <li>Working as call center agent</li>
+        <li>Working as clients network engineer - connecting clients to the company network</li>
+        <li>Administrating the network of Volyn region</li>
+        <li>Creating tools for automatic monitoring and administration of the network</li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="section">
+    <h2>Skills</h2>
+    <ul>
+      <li>PHP, Python, OOP, programming patterns</li>
+      <li>Experience of using frameworks (Zend, Symfony, Yii, Codeigniter, Laravel and others MVC-frameworks)</li>
+      <li>Understanding and using of development principles DRY, KISS, SOLID, BUFD</li>
+      <li>Composer for managing project PHP dependencies</li>
+      <li>tox, PHPUnit, Selenium, Test Driven Development</li>
+      <li>Debugging experience (XDebug, Chrome Tools)</li>
+      <li>HTML(5), CSS(3), forms, valid semantic coding</li>
+      <li>Working knowledge of JavaScript and jQuery (with plugins and effects), Vue.js, React</li>
+      <li>SQL (native and with frameworks AR, ORM)</li>
+      <li>MySQL building effective schemas and effective queries (Replication, Sharding)</li>
+      <li>Elasticsearch </li>
+      <li>Usability experience</li>
+      <li>Understanding of client-server interactions (AJAX, JSON, XML, SOAP)</li>
+      <li>Technical documentation writing skills (OpenAPI(Swagger), ApiDoc)</li>
+      <li>Docker (docker-compose)</li>
+      <li>Caching engines (Memcached, Redis)</li>
+      <li>Queueing systems (RabbitMQ, own implementation, AWS SQS, AWS SNS)</li>
+      <li>Version control systems (mostly GIT)</li>
+      <li>Web-app setting up and administrating experience using cloud hosting providers (Google App Engine, Microsoft AZURE, Amazon AWS)</li>
+      <li>Setting up dedicated servers and services based on Linux/UNIX (Ubuntu, RedHat, NetBSD, FreeBSD) (LAMP, LEMP)</li>
+      <li>Server config tools (SSH, FTP, SFTP)</li>
+      <li>Has experience of building high available GEO-distributed WEB-applications</li>
+      <li>Docker (multiple containers interactions)</li>
+      <li>Agile development (JIRA, Scrum, Canban)</li>
+      <li>Analytic and problems solving skills</li>
+      <li>Ability to understand and modify code from other persons</li>
+      <li>Teamwork abilities (positive experience of working in teams containing of 2, 3 and 6 developers which works on projects which uses different technologies)</li>
+
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>Education</h2>
+    <ul>
+      <li>2002-2007 years - Open International University of Human Development “Ukraine”, direction “computer science”, specialization “Software equipment of automated systems”, qualification “applications developer”. (Bachelor degree)</li>
+      <li>March-April 2011y. – Cisco CCNA Discovery courses.</li>
+    </ul>
+  </div>
+
+</body>
+</html>
